test/errors/scan_string_named_escape.py
"\N{"
"\N{NOT A REAL NAME}"
"\NSPACE"
"\N{CJK UNIFIED IDEOGRAPH-4e00}"
"\N{}"
