test/errors/scan_string_named_escape.py.expected
test/errors/scan_string_named_escape.py:1 error: malformed \N character escape
test/errors/scan_string_named_escape.py:2 error: unknown Unicode character name
test/errors/scan_string_named_escape.py:3 error: malformed \N character escape
test/errors/scan_string_named_escape.py:4 error: unknown Unicode character name
test/errors/scan_string_named_escape.py:5 error: malformed \N character escape
